const mongoose = require('mongoose');
const bcrypt = require('bcryptjs');

const userSchema = new mongoose.Schema({
    username: {
        type: String,
        required: [true, 'Username is required'],
        trim: true,
        minlength: [3, 'Username must be at least 3 characters'],
        maxlength: [30, 'Username cannot exceed 30 characters']
    },
    email: {
        type: String,
        required: [true, 'Email is required'],
        lowercase: true,
        trim: true,
        match: [/^\w+([.-]?\w+)*@\w+([.-]?\w+)*(\.\w{2,3})+$/, 'Please enter a valid email']
    },
    password: {
        type: String,
        required: function() {
            // Password not required if user signed up via OAuth
            return !this.oauthProvider;
        },
        minlength: [6, 'Password must be at least 6 characters'],
        select: false
    },
    // OAuth provider information
    oauthProvider: {
        type: String,
        enum: ['google', 'facebook'],
        default: null
    },
    oauthId: {
        type: String,
        default: null
    },
    role: {
        type: String,
        enum: ['user', 'seller', 'admin'],
        default: 'user'
    },
    profile: {
        firstName: {
            type: String,
            trim: true,
            maxlength: [50, 'First name cannot exceed 50 characters']
        },
        lastName: {
            type: String,
            trim: true,
            maxlength: [50, 'Last name cannot exceed 50 characters']
        },
        phone: {
            type: String,
            trim: true,
            match: [/^[\+]?[1-9][\d]{0,15}$/, 'Please enter a valid phone number']
        },
        avatar: {
            type: String,
            default: null
        },
        address: {
            type: mongoose.Schema.Types.Mixed,
            default: {}
        }
    },
    isActive: {
        type: Boolean,
        default: true
    },
    isEmailVerified: {
        type: Boolean,
        default: false
    },
    // Password reset OTP
    resetPassword: {
        otp: {
            code: String,
            expiresAt: Date,
            attempts: { type: Number, default: 0 }
        },
        lastRequestedAt: Date
    },
    lastLogin: {
        type: Date,
        default: null
    },
    // For sellers
    sellerProfile: {
        businessName: String,
        businessType: {
            type: String,
            enum: ['individual', 'company'],
            default: 'individual'
        },
        businessLicense: String,
        taxId: String,
        description: String,
        isApproved: {
            type: Boolean,
            default: false
        },
        approvedAt: Date,
        approvedBy: {
            type: mongoose.Schema.Types.ObjectId,
            ref: 'User'
        },
        // Bank account information for payments
        bankAccount: {
            bankName: {
                type: String,
                trim: true
            },
            accountNumber: {
                type: String,
                trim: true
            },
            accountHolder: {
                type: String,
                trim: true
            },
            branch: {
                type: String,
                trim: true
            },
            isVerified: {
                type: Boolean,
                default: false
            },
            verifiedAt: Date,
            verifiedBy: {
                type: mongoose.Schema.Types.ObjectId,
                ref: 'User'
            }
        }
    },
    // Wallet balance for users
    wallet: {
        balance: {
            type: Number,
            default: 0,
            min: 0
        },
        currency: {
            type: String,
            default: 'VND'
        }
    }
}, {
    timestamps: true
});

// Indexes for better performance
userSchema.index({ email: 1 }, { unique: true });
userSchema.index({ username: 1 }, { unique: true });
userSchema.index({ role: 1 });
userSchema.index({ 'sellerProfile.isApproved': 1 });
// Partial index: chỉ unique khi oauthProvider không null (chỉ cho OAuth users)
userSchema.index(
    { oauthProvider: 1, oauthId: 1 }, 
    { 
        unique: true, 
        partialFilterExpression: { oauthProvider: { $ne: null } }
    }
);

// Hash password before saving
userSchema.pre('save', async function(next) {
    // Skip password hashing if user is using OAuth and password is not set
    if (!this.isModified('password') || (this.oauthProvider && !this.password)) return next();
    
    // If password is being set/modified, hash it
    if (this.password) {
        try {
            const salt = await bcrypt.genSalt(12);
            this.password = await bcrypt.hash(this.password, salt);
            next();
        } catch (error) {
            next(error);
        }
    } else {
        next();
    }
});

// Compare password method
userSchema.methods.comparePassword = async function(candidatePassword) {
    return bcrypt.compare(candidatePassword, this.password);
};

// Get full name
userSchema.virtual('fullName').get(function() {
    if (this.profile.firstName && this.profile.lastName) {
        return `${this.profile.firstName} ${this.profile.lastName}`;
    }
    return this.username;
});

// Remove sensitive data when converting to JSON
userSchema.methods.toJSON = function() {
    const userObject = this.toObject();
    delete userObject.password;
    delete userObject.__v;
    return userObject;
};

module.exports = mongoose.model('User', userSchema);

